Fix question box and answer boxes alignment

--- a/css/style.css
+++ b/css/style.css
@@ -61,11 +61,14 @@ audio {
 }
 
 #question-box {
-	background: #ddd;
-	width: 960px;
-	margin: 0 auto;
+	width: 932px;
+	margin: 10px auto;
 	padding: 10px;
 	font-size: 1.5em;
+	color: white;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #1a88e5;
 }
 
 .big-text {
@@ -125,6 +128,11 @@ audio {
 	table-layout: fixed;
 	width: 960px;
 	margin: 0 auto;
+}
+
+.answer-wrapper {
+	table-layout: fixed;
+	width: 100%;
 }
 
 #pre-start {
